tests/NormalTests/paczka1/fuzzy1/32820096.err
Error in line 3: Ertjuw79R1V A163 33,4
Error in line 5: ClXybMx A867 67,5
Error in line 14: ClXybMx A163 -1,6
Error in line 23: CeFGm9O A867 2,4
Error in line 20: S703 S494 109,6
